RESOLVED FIXED264522
Assert that several private protocol methods are never called when async interactions are enabled
https://bugs.webkit.org/show_bug.cgi?id=264522
Summary Assert that several private protocol methods are never called when async inte...
Wenson Hsieh
Reported 2023-11-09 14:54:31 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-09 15:20:37 PST
Wenson Hsieh
Comment 2 2023-11-09 15:31:46 PST
EWS
Comment 3 2023-11-09 18:59:28 PST
Committed 270497@main (8fa45e3b720a): <https://commits.webkit.org/270497@main> Reviewed commits have been landed. Closing PR #20264 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.