Assert that several private protocol methods are never called when async interactions are enabled https://bugs.webkit.org/show_bug.cgi?id=264522 rdar://118202852

Reviewed by Tim Horton, Megan Gardner and Abrar Rahman Protyasha.

Add several release assertions to make it easier to identify cases where legacy UIKit SPIs are still
being exercised, in the case where these SPI methods are invoked, but the async interactions are
enabled in WebKit.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView startAutoscroll:]):
(-[WKContentView scrollSelectionToVisible:]):
(-[WKContentView requestAutocorrectionRectsForString:withCompletionHandler:]):
(-[WKContentView applyAutocorrection:toString:isCandidate:withCompletionHandler:]):
(-[WKContentView requestAutocorrectionContextWithCompletionHandler:]):
(-[WKContentView modifierFlagsDidChangeFrom:to:]):
(-[WKContentView handleKeyWebEvent:withCompletionHandler:]):
(-[WKContentView _internalHandleKeyWebEvent:withCompletionHandler:]):
(-[WKContentView requestRVItemInSelectedRangeWithCompletionHandler:]):
(-[WKContentView prepareSelectionForContextMenuWithLocationInView:completionHandler:]):
(-[WKContentView handleAsyncKeyEvent:withCompletionHandler:]):
(-[WKContentView handleKeyWebEvent:]): Deleted.

Canonical link: https://commits.webkit.org/270497@main